--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -7,5 +7,5 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:defaultNavHost="true"
-    app:navGraph="@navigation/main"
-    tools:context=".MapsActivity" />
+    app:navGraph="@navigation/main_graph"
+    tools:context=".app.MainActivity" />
